# firespot

./: .gitignore  README.md  package-lock.json
backend/: land_cover.csv  main.py  pyproject.toml  test.py  test_firestore.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.svelte  Map.svelte
ml/: clean_data.py  clean_data2.py  model.ubj  predict.py  pyproject.toml  requirements.txt  train.py  train2.py
ml/data/: .gitignore  fire_density.csv
