[project]
name = "firespot-backend"
version = "0.1.0"
description = "Are you in a fire spot? Discover fire-prone areas based on concentration of fuel sources."
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "scikit-learn>=1.8.0",
    "simplekml>=1.3.6",
    "xgboost>=3.2.0",
]
